--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
             <p>
                 If you already have an account
             </p>
-            <p>You can  <a href="/index.html">Login here!</a> </p>
+            <p>You can  <a href="./index.html">Login here!</a> </p>
             <img class="man" src="./images/Saly-14.svg" alt="standing-man">
         </div>
         <div class="right">
