--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>
                 If you don’t have an account register
             </p>
-            <p>You can  <a href="/register.html">Register here !</a> </p>
+            <p>You can  <a href="./register.html">Register here !</a> </p>
             <img class="man" src="./images/Saly-14.svg" alt="standing-man">
         </div>
         <div class="right">
